msa/k8s_ingress_certificate/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-msa-ingress # ⭐️ 이름 바꿈!
  namespace: clean
  annotations:
    kubernetes.io/ingress.class: nginx # 인그레스도 nginx로 만들어짐
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # 첫번째 prefix 제거 후 인그레스로 보냄
    cert-manager.io/cluster-issuer: letsencrypt-prod # 이 부분을 추가
spec:
  # 아래 tls 부분을 추가!
  tls:
  - hosts:
    - "server.clean01.store"
    secretName: clean-com-tls
  rules:
  - host: server.clean01.store
    http:
      paths:
      - path: /member-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: member-service
            port:
              number: 80 # 서비스 포트를 적어 줘야 한다.
      - path: /order-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80 # 서비스 포트를 적어 줘야 한다.
      
      - path: /product-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80 # 서비스 포트를 적어 줘야 한다.
